[package]
name = "binary_size"
version = "0.1.0"
authors = ["Kevin Stenerson <kestred@users.noreply.github.com>"]
edition = "2018"

# workaround for semantic-release-cargo
publish = ["do-not-publish"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["jwiesler-async-stripe/full", "jwiesler-async-stripe/webhook-events"]
runtime-blocking = ["jwiesler-async-stripe/runtime-blocking"]
runtime-async = ["jwiesler-async-stripe/runtime-async-std-surf", "async-std"]
checkout = ["jwiesler-async-stripe/checkout"]
billing = ["jwiesler-async-stripe/billing"]
connect = ["jwiesler-async-stripe/connect"]
fraud = ["jwiesler-async-stripe/fraud"]
issuing = ["jwiesler-async-stripe/issuing"]
orders = ["jwiesler-async-stripe/orders"]
sigma = ["jwiesler-async-stripe/sigma"]
webhook-endpoints = ["jwiesler-async-stripe/webhook-endpoints"]

[dependencies]
jwiesler-async-stripe = { path = "../../", default-features = false }
async-std = { version = "1.7.0", features = ["attributes"], optional = true }
